--- a/exercícios/ex-008/tabelas-complexas.html
+++ b/exercícios/ex-008/tabelas-complexas.html
@@ -36,10 +36,11 @@
 </head>
 <body>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
         </thead>
         <tbody>
             <tr>
@@ -153,7 +154,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td><strong>00000</strong></td>
             </tr>
         </tfoot>
