--- a/exercícios/ex-010/form.html
+++ b/exercícios/ex-010/form.html
@@ -25,7 +25,7 @@
 <body>
     <h1>FORMULÁRIO DE CADASTRO</h1>
     <h2>Preencha o formulário a seguir</h2>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post">
 
         <label for="nome">Nome:</label>
         <input type="text" name="nome" id="nome">
