--- a/exercícios/ex-010/form03.html
+++ b/exercícios/ex-010/form03.html
@@ -19,6 +19,16 @@
         </p>
 
         <p>
+            <label for="mes">Mês de referência</label>
+            <input type="month" name="mes" id="mes" required>
+        </p>
+
+        <p>
+            <label for="data">Data</label>
+            <input type="datetime-local" name="data" id="data">
+        </p>
+
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
