--- a/exercícios/ex-011/mq005/index.html
+++ b/exercícios/ex-011/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span class="material-symbols-outlined" id="icone-menu" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="menu">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -27,5 +31,14 @@
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum autem laborum aspernatur nemo quaerat quasi necessitatibus ex et? Suscipit dolorum laborum id veritatis vitae totam saepe odit laudantium sed error? Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nemo fugit doloremque sit deleniti aut delectus neque amet, magni incidunt pariatur eius veniam rem ipsa beatae illo. Numquam, quidem impedit.</p>
     </main>
+    <script>
+        function clickMenu() {
+            if (menu.style.display == 'block'){
+                menu.style.display = 'none'
+            } else {
+                menu.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
