--- a/exercícios/ex-011/mq005/index.html
+++ b/exercícios/ex-011/mq005/index.html
@@ -33,8 +33,8 @@
     </main>
     <script>
         function clickMenu() {
-            if (menu.style.display == 'block'){
-                menu.style.display = 'none'
+            if (menu.style.display == 'none'){
+                menu.style.display = 'block'
             } else {
                 menu.style.display = 'block'
             }
