--- a/exercícios/ex-011/mq005/index.html
+++ b/exercícios/ex-011/mq005/index.html
@@ -36,7 +36,7 @@
             if (menu.style.display == 'none'){
                 menu.style.display = 'block'
             } else {
-                menu.style.display = 'block'
+                menu.style.display = 'none'
             }
         }
     </script>
